Started implementing some more filters for the tab-suggestions